--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -460,15 +460,15 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.7568 with the hyperparameters {'neighbors': 5, 'weigths': <function gaussian at 0x00000268D5490DC0>, 'f1Score': 0.9628}\n",
+      "The best MCC we found was 0.7568 with the hyperparameters {'neighbors': 5, 'weigths': <function gaussian at 0x00000268CEB77DC0>, 'f1Score': 0.9628}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.7649 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D5490DC0>, 'f1Score': 0.9642}\n",
+      "The best MCC we found was 0.7649 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268CEB77DC0>, 'f1Score': 0.9642}\n",
       "Feature selection method: StepWise For\n",
       "The best MCC we found was 0.7415 with the hyperparameters {'neighbors': 7, 'weigths': 'distance', 'f1Score': 0.9608}\n",
       "Feature selection method: StepWise Back\n",
       "The best MCC we found was 0.7490 with the hyperparameters {'neighbors': 5, 'weigths': 'uniform', 'f1Score': 0.9634}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.6425 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268D5490DC0>, 'f1Score': 0.9493}\n",
+      "The best MCC we found was 0.6425 with the hyperparameters {'neighbors': 3, 'weigths': <function gaussian at 0x00000268CEB77DC0>, 'f1Score': 0.9493}\n",
       "\n",
       "Confusion Matrix of best KNN model\n",
       " [[ 90  47]\n",
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -547,18 +547,18 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6425 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9493}\n",
+      "The best MCC we found was 0.6370 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.9486}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.6978 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.9557}\n",
+      "The best MCC we found was 0.6957 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9549}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.6201 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9483}\n",
+      "The best MCC we found was 0.6144 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9476}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6862 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9558}\n",
+      "The best MCC we found was 0.6807 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9551}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.5803 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.944}\n",
+      "The best MCC we found was 0.5621 with the hyperparameters {'max_depth': 4, 'min_impurity_decrease': 0.05, 'f1Score': 0.9422}\n",
       "\n",
       "Confusion Matrix of best RF model\n",
-      " [[ 71  66]\n",
+      " [[ 70  67]\n",
       " [  9 710]]\n"
      ]
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
