--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -742,7 +742,7 @@
     "mcc = matthews_corrcoef(y_IVS, preds)\n",
     "cm = confusion_matrix(y_IVS, preds)\n",
     "\n",
-    "print(\"Our Selected Model is a KNN, where k=8, using features selected with a Backwards StepWise and a Gaussian weight function: \\n\")\n",
+    "print(\"Our Selected Model is a KNN, where k=3, using features selected with a Random Forest and a Gaussian weight function: \\n\")\n",
     "print(\"The MCC is: \", round(mcc, 4))\n",
     "print(\"The Confusion Matrix is: \\n\", cm)"
    ]
