--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -697,14 +697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our Selected Model is a KNN, where k=8, using features selected with a Backwards StepWise and a Gaussian weight function: \n",
+      "Our Selected Model is a KNN, where k=3, using features selected with a Random Forest and a Gaussian weight function: \n",
       "\n",
       "The MCC is:  0.8184\n",
       "The Confusion Matrix is: \n",
